--- a/mi-banco/src/main/res/layout/list_item_settings.xml
+++ b/mi-banco/src/main/res/layout/list_item_settings.xml
@@ -19,9 +19,9 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="10dp"
-            android:src="@drawable/back_icon"
+            android:src="@drawable/img_fingerprint_blue"
             android:layout_weight="1"
-            android:visibility="gone"
+            android:visibility="visible"
             />
 
         <TextView
