--- a/mi-banco/src/main/res/layout/list_item_settings_push.xml
+++ b/mi-banco/src/main/res/layout/list_item_settings_push.xml
@@ -58,7 +58,9 @@
             android:layout_height="40dp"
             android:layout_margin="10dp"
             android:src="@drawable/notification_push_icon"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:visibility="visible"
+            />
 
         <TextView
             android:id="@+id/title_text"
