--- a/mi-banco/src/main/res/menu-v11/menu.xml
+++ b/mi-banco/src/main/res/menu-v11/menu.xml
@@ -62,7 +62,7 @@
         android:orderInCategory="99"
         app:showAsAction="ifRoom"
         android:title="@string/logout"
-        android:visible="true" />
+        android:visible="false" />
     <item
         android:id="@+id/menu_close"
         android:icon="@drawable/ic_close"
