--- a/mi-banco/src/main/res/layout/account_details_top_section.xml
+++ b/mi-banco/src/main/res/layout/account_details_top_section.xml
@@ -7,36 +7,38 @@
 
     <LinearLayout
         style="@style/AccountsItem"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:background="@color/title_bar_background" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="104dp"
             android:orientation="vertical"
-            android:paddingBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:paddingTop="10dp" >
-            <LinearLayout style="@style/AccountsItemInfoSection" >
+            android:paddingTop="5dp" >
+
+            <LinearLayout android:layout_height="0dp"
+                android:layout_width="0dp">
 
                 <TextView
                     android:id="@+id/item_name"
                     style="@style/AccountsTitle"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:visibility="invisible"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 >
                 <ImageView
                     android:id="@+id/item_image"
-                    android:layout_width="150dp"
-                    android:layout_height="match_parent"
-                    style="@style/AccountsItemImage"
+                    android:layout_width="125dp"
+                    android:layout_height="80dp"
+                    style="@style/CardSelection_image_detail"
                     tools:ignore="ContentDescription" />
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -76,7 +78,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingBottom="10dp"
@@ -122,7 +124,8 @@
                     android:layout_height="35dp"
                     android:background="@drawable/on_off_rounded_buttton"
                     android:clickable="true"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/onoff_label"
