--- a/mi-banco/src/main/res/drawable/account_rounded_corners_tabs.xml
+++ b/mi-banco/src/main/res/drawable/account_rounded_corners_tabs.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#6679747E" />
+    <solid android:color="#eeeeef" />
 
     <stroke
         android:width="1dp"
-        android:color="#6679747E" />
+        android:color="#e8e7e9" />
 
-    <corners android:radius="15px" />
+    <corners android:radius="45px" />
 
 </shape>
